# near_practice

./: .gitignore  Makefile  README.md
amm/: Cargo.toml  Makefile
amm/scripts/: deploy.sh
amm/src/: lib.rs
amm_wallet/: Cargo.toml  Makefile
amm_wallet/scripts/: build.sh
amm_wallet/src/: lib.rs
ft/: Cargo.toml  Makefile
ft/scripts/: deploy.sh
ft/src/: lib.rs
integration-tests/: Cargo.toml  Makefile
integration-tests/src/: consts.rs  tests.rs  utils.rs
