[package]
name = "fungible-token-integration-tests"
version = "1.0.0"
publish = false
edition = "2018"

[dev-dependencies]
near-sdk = "4.0.0"
anyhow = "1.0.58"
borsh = "0.9.3"
maplit = "1.0.2"
near-units = "0.2.0"
# arbitrary_precision enabled for u128 types that workspaces requires for Balance types
serde_json = { version = "1.0.82", features = ["arbitrary_precision"] }
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
workspaces = "0.4.0"
pkg-config = "0.3.25"
near-contract-standards = "4.0.0"
near-account-id = "0.14.0"

[[example]]
name = "integration-tests"
path = "src/tests.rs"
